--- a/design-system/radix-ui-storybook/package.json
+++ b/design-system/radix-ui-storybook/package.json
@@ -12,6 +12,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@radix-ui/themes": "^1.0.0",
+    "@stitches/react": "^1.2.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "strip-ansi": "^7.1.0"
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-storybook": "^0.6.13",
+    "sass": "^1.65.1",
     "storybook": "^7.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
