--- a/react-query/weatherly/package.json
+++ b/react-query/weatherly/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
