--- a/projects/react-hook-form-with-mui/package.json
+++ b/projects/react-hook-form-with-mui/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
+    "sass": "^1.69.7",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
